Use Java 17 API for confidential computing